# g4d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pass_through.geom  slice.geom  slice.py  slice_ver2.geom
demo/: CMakeLists.txt  main.cpp
include/g4d/: Buffer.hpp  Math.hpp  Math.inl  OpenGL.hpp  Shader.hpp  ShaderProgram.hpp  Transform.hpp  VertexArray.hpp  shader.hpp  transform.hpp
include/g4d/Render/: DisplayMesh.hpp  VertexLayout.hpp
include/g4d/Render/GL/: GLDisplayMesh.hpp
shaders/basic/: frag.glsl  geom.glsl  vert.glsl
shaders/textured/: frag.glsl  geom.glsl  vert.glsl
src/: CMakeLists.txt
src/g4d/: Buffer.cpp  Shader.cpp  ShaderProgram.cpp  Transform.cpp  VertexArray.cpp  log.cpp  log.hpp  shader.cpp  transform.cpp
src/g4d/Render/: DisplayMesh.cpp  VertexLayout.cpp
src/g4d/Render/GL/: GLDisplayMesh.cpp
tools/meshgen/: brushes.py  csg.py  germa.m4d  mesh.py  test_csg.py  test_mesh.py  test_split.py
tools/texgen/: cell_noise.py  operators.py  output.py  preview.py  test_cell.py
